# VibeCheck

./: .coverage  .dockerignore  .dvcignore  .env.example  .env.hf.example  .gitattributes  .gitattributes_hf  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  CONTRIBUTING.md  DATA_SETUP.md  DEPLOY_AWS.md  DEPLOY_FLY.md  DEPLOY_GCP.md  DEPLOY_TO_RENDER.md  DOCKER_MIGRATION_SUMMARY.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.render  Dockerrun.aws.json  HF_DEPLOYMENT_SUMMARY.md  HUGGINGFACE_DEPLOYMENT.md  MLOPS.md  Procfile  QUICKSTART_HF.md  RAILWAY_DEPLOYMENT.md  README.html  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICKSTART.md  RENDER_TROUBLESHOOTING.md  TEST_SUMMARY.md  app_gradio.py  cloudbuild.yaml  deploy_to_hf.sh  discussion.md  docker-compose.mlflow.yml  (+32 more)
.dvc/: config
.ebextensions/: 01_flask.config
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
about/: index.html
api/: __init__.py  main.py
app/: app.py  streamlit_app.py
app/templates/: index.html  restaurant.html
contributing/: index.html
docker/: README.md
docker/api/: Dockerfile
docker/app/: Dockerfile
docker/db/: init.sql
docker/frontend/: Dockerfile
docker/ml-service/: Dockerfile
docker/nginx/: nginx.conf
docs/: about.md  contributing.md  index.md
docs/user-guide/: api.md  getting-started.md  installation.md  quick-start.md
mlruns/0/: meta.yaml
mlruns/194911169787087678/: meta.yaml
mlruns/194911169787087678/c8c2d23c51c44e6c893c78e4a34be4ad/: meta.yaml
mlruns/194911169787087678/c8c2d23c51c44e6c893c78e4a34be4ad/metrics/: avg_cluster_size  cluster_ratio  clustered_points  clustering_time_sec  largest_cluster_size  noise_points  num_clusters  smallest_cluster_size  umap_reduction_time_sec
mlruns/194911169787087678/c8c2d23c51c44e6c893c78e4a34be4ad/tags/: mlflow.runName  mlflow.source.git.commit  purpose
mlruns/393962990824315840/: meta.yaml
mlruns/393962990824315840/ed9578a1461041d98371ec9a7da014b8/: meta.yaml
mlruns/393962990824315840/ed9578a1461041d98371ec9a7da014b8/metrics/: avg_images_per_restaurant  avg_time_per_restaurant_ms  embedding_generation_time_sec  failed_embeddings  images_found  images_missing  successful_embeddings
mlruns/393962990824315840/ed9578a1461041d98371ec9a7da014b8/params/: image_model
mlruns/393962990824315840/ed9578a1461041d98371ec9a7da014b8/tags/: dataset  mlflow.runName  purpose
mlruns/933892599236495095/: meta.yaml
mlruns/933892599236495095/3e48efb23be8467bb9633c6fd981031b/: meta.yaml
mlruns/933892599236495095/3e48efb23be8467bb9633c6fd981031b/metrics/: avg_result_relevance  avg_search_latency_ms  faiss_index_build_time_sec  index_size_mb  p95_search_latency_ms  p99_search_latency_ms  total_embeddings  user_satisfaction_score  vibe_match_accuracy
mlruns/933892599236495095/3e48efb23be8467bb9633c6fd981031b/params/: index_type
mlruns/933892599236495095/3e48efb23be8467bb9633c6fd981031b/tags/: mlflow.runName  mlflow.source.name
reference/SUMMARY/: index.html
reference/vibecheck/: index.html
reference/vibecheck/analysis/: index.html
reference/vibecheck/analysis/vibe_mapper/: index.html
reference/vibecheck/api/: index.html
reference/vibecheck/client/: index.html
reference/vibecheck/database/: index.html
reference/vibecheck/embeddings/: index.html
reference/vibecheck/embeddings/generator/: index.html
reference/vibecheck/embeddings/models/: index.html
reference/vibecheck/logging_config/: index.html
reference/vibecheck/mlflow_config/: index.html
reference/vibecheck/monitoring/: index.html
reference/vibecheck/monitoring/evidently_monitor/: index.html
reference/vibecheck/recommender/: index.html
reference/vibecheck/utils/: index.html
scripts/: app.py  create_vibe_map.py  download_data.sh  embeddings.py  fetch_artifacts.sh  generate_embeddings.py  generate_monitoring_report.py  geocode_restaurants.py  geocode_restaurants_backup.py  git-workflow.sh  init_mlflow.py  load_sql.py  map.py  outscraper_clip.ipynb  prepare-render-deploy.sh  run_streamlit.py  scraping_test_final.py  scraping_updated.py  serpapi_full_scraper.py  stats.py  test_outscraper_pipeline.py  test_outscraper_serpapi_HYBRID.py  upload-data-to-render.md
scripts/templates/: index.html
scripts/vibecheck_full_output/: all_restaurants.json  checkpoint.json  project_statistics.json  vibecheck_results.json
search/: search_index.json
serpapi/: serpapi_full.py  serpapi_test_first_2_restaurants.py
src/vibecheck/: __init__.py  client.py  database.py  logging_config.py  mlflow_config.py  recommender.py  utils.py
src/vibecheck/analysis/: vibe_mapper.py
src/vibecheck/embeddings/: generator.py  models.py
src/vibecheck/monitoring/: __init__.py  evidently_monitor.py
tests/: README.md  conftest.py  test_api_endpoints.py  test_embeddings.py  test_placeholder.py  test_recommender.py
user-guide/api/: index.html
user-guide/getting-started/: index.html
user-guide/installation/: index.html
user-guide/quick-start/: index.html
