[tool.poetry]
name = "vibecheck"
version = "0.1.0"
description = "Restaurant recommendation system based on visual aesthetics"
authors = ["Viviana Luccioli <vcl16@georgetown.edu>", "Manav Arora <ma2466@georgetown.edu>"]
readme = "README.md"
packages = [{include = "vibecheck", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = ">=2.0.0"
requests = ">=2.31.0"
google-search-results = ">=2.4.2"
Pillow = ">=10.0.0"
tqdm = ">=4.66.0"
numpy = ">=1.24.0"
streamlit = "^1.51.0"
plotly = "^6.5.0"
faiss-cpu = "^1.13.0"
torch = "^2.9.1"
sentence-transformers = "^5.1.2"
transformers = "^4.57.1"
clip = {git = "https://github.com/openai/CLIP.git"}
psycopg2-binary = "^2.9.11"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"
outscraper = "^5.10.0"
python-dotenv = "^1.2.1"
mlflow = "^2.9.0"
dvc = "^3.43.0"
dvc-s3 = "^3.0.1"
evidently = "^0.4.0"
scikit-learn = "^1.3.0"
umap-learn = "^0.5.5"
hdbscan = "^0.8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
mypy = ">=1.5.0"
pre-commit = "^4.4.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.0"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.2"
mkdocs-section-index = "^0.3.10"

[tool.poetry.scripts]
vibecheck-embeddings = "scripts.generate_embeddings:main"
vibecheck-map = "scripts.create_vibe_map:main"
vibecheck-app = "scripts.run_streamlit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
